# RL-for-Imperfect-Info-Games

./: .gitignore  Dockerfile  README.md  accelerate_config.yaml  agent.py  basicenv.py  env.py  main.py  main2.py  neuralnet.py  pyproject.toml  requirements.txt  results.txt  temp.pth.tar
.github/workflows/: ci.yml
Sequence/: __init__.py  board.py  deck.py
agents/: base.py  heuristic_agent.py  random_agent.py
agents/BasePlayer/: __init__.py
agents/BasePolicyAgent/: __init__.py
agents/NeuralNetworkAgent/: __init__.py  neuralnet.py
agents/RandomAgent/: __init__.py
agents/alphazero_belief/: agent.py
agents/decision_tf/: agent.py
agents/ismcts/: agent.py  ismcts.py  mcts.py
agents/rebel/: agent.py  cfr.py
api/: game_session.py  leaderboard.py  main.py  model_registry.py  replay_store.py  spectator.py  ws_handler.py
api/routes/: game.py
checkpoint/: best.pth.tar  temp.pth.tar
docs/plans/: 2026-03-01-phase2-implementation-plan.md  2026-03-01-sequence-ai-agent-design.md  2026-03-01-sequence-ai-implementation-plan.md  2026-03-01-sequence-ui-design-guide.md  (+3 more)
engine/: actions.py  board.py  deck.py  game_state.py  rules.py
k8s/: api-deployment.yaml  arena-job.yaml  configmap.yaml  pvc.yaml  self-play-job.yaml  training-job.yaml
models/: board_encoder.py  board_tokenizer.py  deberta_policy_value.py  decision_transformer.py  vit_policy_value.py
tests/test_agents/: test_baselines.py  (+7 more)
training/: accelerate_trainer.py  arena.py  elo.py  experience_buffer.py  hub_publisher.py  self_play.py  train.py  trainer.py
webapp/: package-lock.json  package.json
(+56 files in other folders)
