[project]
name = "sequence-ai"
version = "0.1.0"
description = "Professional Sequence board game with state-of-the-art AI agents"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "torch>=2.1",
    "transformers>=4.36",
    "accelerate>=0.25",
    "safetensors>=0.4",
    "wandb>=0.16",
    "pyyaml>=6.0",
    "fastapi>=0.108",
    "uvicorn>=0.25",
    "websockets>=12.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["engine*", "agents*", "models*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
